--- a/app/src/main/res/layout/activity_linear_layout.xml
+++ b/app/src/main/res/layout/activity_linear_layout.xml
@@ -16,7 +16,8 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
-            android:checkedButton="@+id/rbtn01">
+            android:checkedButton="@+id/rbtn01"
+            android:id="@+id/rgr01">
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -54,6 +55,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"/>
+        android:background="@color/white"
+        android:id="@+id/tv01"/>
 
 </LinearLayout>
